--- a/medical_inventory/app/views/products/_form.html.erb
+++ b/medical_inventory/app/views/products/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_name ||= "Manage" %>
-<h1 class="text-center"> <%= form_name %> city </h1>
+<% form_name ||= "Manage" %>
+<h1 class="text-center"> <%= form_name %> product </h1>
 
   <% if @product.errors.any? %>
   <div id="error_explanation">
@@ -16,23 +16,27 @@
   <% end %>
 
 <div class="container">
-  <%= form_for @city do |c| %>
+  <%= form_for @product do |pr| %>
     <div class="form-group">
-      <%= c.label :name %>
-      <%= c.text_field :name, class: "form-control" %>
+      <%= pr.label :name %>
+      <%= pr.text_field :name, class: "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= c.label :country_name %>
-      <%= c.text_field :country_name, class: "form-control" %>
+      <%= pr.label :price %>
+      <%= pr.number_field :price, class: "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= c.label :time_zone %>
-      <%= c.text_field :time_zone, class: "form-control" %>
+      <%= pr.label :laboratory %>
+      <%= pr.number_field :laboratory_id, class: "form-control" %>
     </div>
 
-    <%= c.submit "#{form_name} City", class:"btn btn-primary" %>
+    <div class="form-group">
+      <%= pr.label :avatar %>
+      <%= pr.file_field :avatar, class: "form-control" %>
+    </div>
+    <%= pr.submit "#{form_name} product", class:"btn btn-primary" %>
 
   <% end %>
 </div>
