--- a/medical_inventory/app/views/layouts/application.html.erb
+++ b/medical_inventory/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
               <li><a href="<%= new_user_registration_path %>">Sign up</a></li>
           <% else %>
               <li><a href="<%= new_product_path %>">New Product</a></li>
+              <li><a href="<%= new_laboratory_path %>">New Laboratory</a></li>
+              <li><a href="<%= new_stock_path %>">New Stock</a></li>
               <li><a href="<%= destroy_user_session_path %>" data-method="delete">Log out</a></li>
           <% end %>
         </ul>
