--- a/medical_inventory/app/views/products/_form.html.erb
+++ b/medical_inventory/app/views/products/_form.html.erb
@@ -17,21 +17,26 @@
 
 <div class="container">
   <%= form_for @product do |pr| %>
+    <!--Name-->
     <div class="form-group">
       <%= pr.label :name %>
       <%= pr.text_field :name, class: "form-control" %>
     </div>
-
+    <!--Price-->
     <div class="form-group">
       <%= pr.label :price %>
       <%= pr.number_field :price, class: "form-control" %>
     </div>
-
+    <!--Select Laboratory-->
     <div class="form-group">
       <%= pr.label :laboratory %>
-      <%= pr.number_field :laboratory_id, class: "form-control" %>
+      <select name="product[laboratory_id]" class="selectpicker">
+        <%= @laboratories.each do |l|  %>
+            <option value="<%= l.id %>"> <%= l.name %> </option>
+        <% end  %>
+      </select>
     </div>
-
+    <!--Avatar Product-->
     <div class="form-group">
       <%= pr.label :avatar %>
       <%= pr.file_field :avatar, class: "form-control" %>
