--- a/medical_inventory/app/views/layouts/application.html.erb
+++ b/medical_inventory/app/views/layouts/application.html.erb
@@ -6,55 +6,53 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
-
 <body>
-  <nav class="navbar navbar-default col-md-12">
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <a class="navbar-brand" href="<%= root_path %>">Medical Inventory <%= current_user ? "| #{current_user.email}" : '' %></a>
-      <ul class="nav navbar-nav navbar-right">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="<%= root_path %>">Medical Inventory <%= current_user ? "| #{current_user.email}" : '' %></a>
         <% if !current_user %>
-        <li><a href="<%= new_user_session_path %>">Log in</a></li>
-        <li><a href="<%= new_user_registration_path %>">Sign up</a></li>
+        <a class="btn btn-info btn-xs navbar-btn" href="<%= new_user_session_path %>">Log in</a>
+        <a class="btn btn-primary btn-xs navbar-btn" href="<%= new_user_registration_path %>">Sign up</a>
         <% else %>
-        <!--PRODUCTS-->
-        <div class="dropdown col-md-3">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Products
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="<%= new_product_path %>">New Product</a></li>
-            <li><a href="<%= products_path %>">All Product</a></li>
-          </ul>
-        </div>
-        <!--LABORATORIES-->
-        <div class="dropdown col-md-4">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Laboratories
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="<%= new_laboratory_path %>">New Laboratory</a></li>
-            <li><a href="<%= laboratories_path %>">All Laboratory</a></li>
-          </ul>
-        </div>
-        <!--STOCKS-->
-        <div class="dropdown col-md-3">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Stocks
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="<%= new_stock_path %>">New Stock</a></li>
-            <li><a href="<%= stocks_path %>">All Stocks</a></li>
-          </ul>
-        </div>
-        <a class="btn btn-default" href="<%= filters_path %>">Filters</a>
-        <a class="btn btn-primary" href="<%= destroy_user_session_path %>" data-method="delete">Log out</a>
-        <% end %>
-      </ul>
-    </div>
+        <a class="btn btn-danger btn-xs navbar-btn" href="<%= destroy_user_session_path %>" data-method="delete">Log out</a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <!--PRODUCTS-->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="<%= new_product_path %>">New Product</a></li>
+              <li><a href="<%= products_path %>">View all products</a></li>
+            </ul>
+          </li>
+          <!--LABORATORIES-->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Laboratories <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="<%= new_laboratory_path %>">New Laboratory</a></li>
+              <li><a href="<%= laboratories_path %>">View all Laboratories</a></li>
+            </ul>
+          </li>
+          <!--STOCKS-->
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stocks <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="<%= new_stock_path %>">New Stock</a></li>
+              <li><a href="<%= stocks_path %>">View all stocks</a></li>
+            </ul>
+          </li>
+          <a class="btn btn-success btn-xs navbar-btn" href="<%= filters_path %>">FILTER</a>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+      <% end %>
+    </div><!-- /.container-fluid -->
   </nav>
+
   <%= yield %>
 </body>
 </html>
