--- a/medical_inventory/app/views/products/_form.html.erb
+++ b/medical_inventory/app/views/products/_form.html.erb
@@ -22,26 +22,30 @@
       <%= pr.label :name %>
       <%= pr.text_field :name, class: "form-control" %>
     </div>
-    <!--Price-->
-    <div class="form-group">
-      <%= pr.label :price %>
-      <%= pr.number_field :price, class: "form-control" %>
-    </div>
-    <!--Select Laboratory-->
-    <div class="form-group">
-      <%= pr.label :laboratory %>
-      <select name="product[laboratory_id]" class="selectpicker">
-        <%= @laboratories.each do |l|  %>
-            <option value="<%= l.id %>"> <%= l.name %> </option>
-        <% end  %>
-      </select>
-    </div>
-    <!--Avatar Product-->
-    <div class="form-group">
-      <%= pr.label :avatar %>
-      <%= pr.file_field :avatar, class: "form-control" %>
+
+    <div class="row">
+      <!--Price-->
+      <div class="col-sm-4 form-group">
+        <%= pr.label :price %>
+        <%= pr.number_field :price, class: "form-control" %>
+      </div>
+      <!--Select Laboratory-->
+      <div class="col-sm-4 form-group">
+        <%= pr.label :laboratory %><br>
+        <select name="product[laboratory_id]" class="selectpicker">
+          <%= @laboratories.each do |l|  %>
+              <option value="<%= l.id %>"> <%= l.name %> </option>
+          <% end  %>
+        </select>
+      </div>
+      <!--Avatar Product-->
+      <div class="col-sm-4 form-group">
+        <%= pr.label :avatar %>
+        <%= pr.file_field :avatar, class: "form-control" %>
+      </div>
     </div>
     <%= pr.submit "#{form_name} product", class:"btn btn-primary" %>
+    <a class="btn btn-default" href="<%= products_path %>" > View all products </a>
 
   <% end %>
 </div>
