--- a/medical_inventory/app/views/products/show.html.erb
+++ b/medical_inventory/app/views/products/show.html.erb
@@ -1,14 +1,27 @@
 <div class="container">
     <h1 class="text-center">Product Selected</h1>
+    <article>
+      <table class="table table-bordered table-responsive">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Name</th>
+            <th>Laboratory</th>
+            <th>EDIT</th>
+            <th>DELETE</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="col-md-1 product-img"><img src="<%= @product.avatar %>" width="120" alt="product"></td>
+            <td><%= @product.name %></td>
+            <td><%= @product.laboratory.name %></td>
+            <td><a class="btn btn-info" href="<%= edit_product_path(@product.id)%>"> Edit</a></td>
+            <td><a class="btn btn-danger" href="<%= product_path(@product.id) %>" data-method="delete"> Delete </a></td>
+          </tr>
+        </tbody>
+    </table>
+    <a class="btn btn-default" href="<%= products_path %>" > View all products </a>
 
-    <article class="row airport">
-      <strong>Name</strong>
-      <p> <%= @product.name %> </p>
-      <strong>Laboratory</strong>
-      <p><%= @product.laboratory.name%></p>
-      <a class="btn btn-danger" href="<%= product_path(@product.id) %>" data-method="delete"> Delete </a>
-      <a class="btn btn-info" href="<%= edit_product_path(@product.id)%>"> Edit</a>
-      <a class="btn btn-default" href="<%= products_path %>" > View all products </a>
     </article>
-
 </div>
