add money function

--- a/medical_inventory/app/views/filters/index.html.erb
+++ b/medical_inventory/app/views/filters/index.html.erb
@@ -75,7 +75,7 @@
         <p><%= p.name %></p>
       </div>
       <div class="col-md-1">
-        <p><%= p.price %></p>
+        <p><%= money p.price %></p>
       </div>
     </div>
     <% end if @products_by_price%>
