--- a/medical_inventory/app/views/products/show.html.erb
+++ b/medical_inventory/app/views/products/show.html.erb
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="container col-md-12">
     <h1 class="text-center">Product Selected</h1>
 
     <article class="row airport">
+      <img id="product-img" src="<%= @product.avatar %>" alt="product">
       <strong>Name</strong>
       <p> <%= @product.name %> </p>
       <strong>Laboratory</strong>
