--- a/medical_inventory/app/views/static_pages/index.html.erb
+++ b/medical_inventory/app/views/static_pages/index.html.erb
@@ -1,20 +1,17 @@
 <div class="container">
   <% if current_user %>
-    <h1 class="text-center">Welcome</h1>
     <!--PRODUCTS OVERDUES-->
     <div class="container">
       <h1 class="text-center">Overdue stocks</h1>
       <% @overdue_stocks.each do |os| %>
-      <article class="row laboratory">
+      <article class="row laboratory well well-lg">
         <ul class="list-unstyled">
           <li class="col-md-1"><strong>Product</strong></li>
           <li class="col-md-1"><%= os.product.name %></li>
           <li class="col-md-1"><strong>User</strong></li>
           <li class="col-md-2"><%= os.user.email %></li>
-          <li class="col-md-1"><strong>Quantity</strong></li>
-          <li class="col-md-1"><%= os.quantity %></li>
           <li class="col-md-1"><strong>Due Date</strong></li>
-          <li class="col-md-1"><%= os.due_date %></li>
+          <li class="col-md-2"><%= os.due_date %></li>
           <li class="col-md-1"><a href="<%= stock_path(os.id) %>  " data-method="delete" class="btn btn-danger"> Delete </a></li>
           <li class="col-md-1"> <a href="<%= edit_stock_path(os.id)%>" class="btn btn-success"> Edit</a> </li>
           <li class="col-md-1"> <a href="<%= stock_path(os.id)%>" class="btn btn-info">View</a></li>
