Boton all Stocks

--- a/medical_inventory/app/views/stocks/_form.html.erb
+++ b/medical_inventory/app/views/stocks/_form.html.erb
@@ -51,6 +51,6 @@
     </div>
     </div>
     <%= s.submit "#{form_name} stock", class:"btn btn-primary" %>
-
+    <a class="btn btn-default" href="<%= stocks_path %>" > View all stocks </a>
   <% end %>
 </div>
