--- a/medical_inventory/app/assets/stylesheets/products.scss
+++ b/medical_inventory/app/assets/stylesheets/products.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background: url("../uploads/img/medical-bg.jpg") no-repeat center center fixed;
+}
+
 .navbar {
   background: #3f69b5;
 }
