--- a/medical_inventory/app/views/laboratories/index.html.erb
+++ b/medical_inventory/app/views/laboratories/index.html.erb
@@ -1,26 +1,20 @@
 <div class="container">
   <h1 class="text-center"> Laboratories </h1>
+  <% if current_user %>
   <article>
     <table class="table table-bordered table-responsive">
-      <thead>
+      <tbody>
+        <% @laboratories.each do |l| %>
           <tr>
-            <th>LABORATORY</th>
-            <th>DELETE</th>
-            <th>EDIT</th>
-            <th>VIEW</th>
+            <td class="col-sm-1"><strong><%= l.name %></strong></td>
+            <td class="col-sm-1"><a href="<%= laboratory_path(l.id) %>" data-method="delete" class="btn btn-danger"> <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> </a></td>
+            <td class="col-sm-1"> <a href="<%= edit_laboratory_path(l.id)%>" class="btn btn-success"> <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> </a> </td>
+            <td class="col-sm-1"> <a href="<%= laboratory_path(l.id)%>" class="btn btn-info"> <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a> </td>
           </tr>
-    </thead>
-  <tbody>
-      <% @laboratories.each do |l| %>
-      <tr>
-        <td class="col-sm-2"><strong><%= l.name %></strong></td>
-        <td class="col-sm-2"><a href="<%= laboratory_path(l.id) %>" data-method="delete" class="btn btn-danger"> Delete </a></td>
-        <td class="col-sm-2"> <a href="<%= edit_laboratory_path(l.id)%>" class="btn btn-success"> Edit</a> </td>
-        <td class="col-sm-2"> <a href="<%= laboratory_path(l.id)%>" class="btn btn-info">View</a></td>
-      </tr>
-         <% end if @laboratories.any?%>
+        <% end if @laboratories.any?%>
       </tbody>
-      </table>
+    </table>
       <a class="btn btn-default active" href="<%= new_laboratory_path %>">New Laboratory</a>
   </article>
+  <% end %>
 </div>
