--- a/medical_inventory/app/views/layouts/application.html.erb
+++ b/medical_inventory/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="<%= root_path %>">Medical Inventory <%= current_user ? "| #{current_user.email}" : '' %></a>
         <% if !current_user %>
-        <a class="btn btn-info btn-xs navbar-btn" href="<%= new_user_session_path %>">Log in</a>
-        <a class="btn btn-primary btn-xs navbar-btn" href="<%= new_user_registration_path %>">Sign up</a>
+          <a class="btn btn-info btn-xs navbar-btn" href="<%= new_user_session_path %>">Log in</a>
+          <a class="btn btn-primary btn-xs navbar-btn" href="<%= new_user_registration_path %>">Sign up</a>
         <% else %>
-        <a class="btn btn-danger btn-xs navbar-btn" href="<%= destroy_user_session_path %>" data-method="delete">Log out</a>
+          <a class="btn btn-danger btn-xs navbar-btn" href="<%= destroy_user_session_path %>" data-method="delete">Log out</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,7 +43,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stocks <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="<%= new_stock_path %>">New Stock</a></li>
-              <li><a href="<%= stocks_path %>">View all stocks</a></li>
+              <li><a href="<%= stocks_path %>">View my stocks</a></li>
             </ul>
           </li>
           <a class="btn btn-success btn-xs navbar-btn" href="<%= filters_path %>">FILTER</a>
