--- a/medical_inventory/app/views/static_pages/index.html.erb
+++ b/medical_inventory/app/views/static_pages/index.html.erb
@@ -4,31 +4,18 @@
     <!--PRODUCTS OVERDUES-->
     <div class="container">
       <h2 class="text-center">Overdue stocks</h2>
-
       <article class="row laboratory">
-
-
         <table class="table table-bordered table-responsive">
-          <thead>
-            <tr>
-              <th>Product</th>
-              <th>Name</th>
-              <th>User</th>
-              <th>Quantity</th>
-              <th>Due Date</th>
-              <th>VIEW</th>
-            </tr>
-          </thead>
           <tbody>
             <% @overdue_stocks.each do |os| %>
-            <tr>
-              <td class="col-md-1 product-img"><img src="<%= os.product.avatar %>" width="120" alt="product"></td>
-              <td><%= os.product.name %></td>
-              <td><%= os.user.email %></td>
-              <td><%= os.quantity %></td>
-              <td><%= os.due_date %></td>
-              <td><a href="<%= stock_path(os.id)%>" class="btn btn-info">View</a></td>
-            </tr>
+              <tr>
+                <td class="col-md-1 product-img"><img src="<%= os.product.avatar %>" width="120" alt="product"></td>
+                <td><%= os.product.name %></td>
+                <td><%= os.user.email %></td>
+                <td><%= os.quantity %></td>
+                <td><%= os.due_date %></td>
+                <td><a href="<%= stock_path(os.id)%>" class="btn btn-info"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
+              </tr>
             <% end if @overdue_stocks.any?%>
           </tbody>
         </table>
@@ -37,6 +24,6 @@
       </article>
     </div>
   <% else %>
-  <h1 class="text-center">Please Log In</h1>
+    <h1 class="text-center">Please Log In</h1>
   <% end %>
 </div>
