--- a/medical_inventory/app/views/stocks/index.html.erb
+++ b/medical_inventory/app/views/stocks/index.html.erb
@@ -1,34 +1,24 @@
 <div class="container">
   <h1 class="text-center"> Stocks </h1>
   <br>
-
-    <article class="row stock">
-      <table class="table table-bordered table-responsive">
-        <thead>
-            <tr>
-              <th>PRODUCT NAME</th>
-              <th>USER</th>
-              <th>QUANTITY</th>
-              <th>DUE DATE</th>
-              <th>DELETE</th>
-              <th>EDIT</th>
-              <th>VIEW</th>
-            </tr>
-        </thead>
-      <tbody>
-        <% @stocks.each do |s| %>
-        <tr>
-          <td class="col-md-1"><%= s.product.name %></td>
-          <td class="col-md-2"><%= s.user.email %></td>
-          <td class="col-md-1"><%= s.quantity %></td>
-          <td class="col-md-1"><%= s.due_date %></td>
-          <td class="col-md-1"><a href="<%= stock_path(s.id) %>" data-method="delete" class="btn btn-danger"> Delete </a></td>
-          <td class="col-md-1"> <a href="<%= edit_stock_path(s.id)%>" class="btn btn-success"> Edit</a> </td>
-          <td class="col-md-1"> <a href="<%= stock_path(s.id)%>" class="btn btn-info">View</a></td>
-        </tr>
-          <% end if @stocks.any?%>
-    </tbody>
-   </table>
-   <a class="btn btn-default active" href="<%= new_stock_path %>">New Stock</a>
- </article>
+  <% if current_user %>
+      <article class="row stock">
+        <table class="table table-bordered table-responsive">
+          <tbody>
+            <% @stocks.each do |s| %>
+              <tr>
+                <td class="col-md-1"><%= s.product.name %></td>
+                <td class="col-md-2"><%= s.user.email %></td>
+                <td class="col-md-1"><%= s.quantity %></td>
+                <td class="col-md-1"><%= s.due_date %></td>
+                <td class="col-md-1"><a href="<%= stock_path(s.id) %>" data-method="delete" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
+                <td class="col-md-1"> <a href="<%= edit_stock_path(s.id)%>" class="btn btn-success"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> </td>
+                <td class="col-md-1"> <a href="<%= stock_path(s.id)%>" class="btn btn-info"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
+              </tr>
+            <% end if @stocks.any?%>
+        </tbody>
+     </table>
+     <a class="btn btn-default active" href="<%= new_stock_path %>">New Stock</a>
+   </article>
+ <% end %>
 </div>
